<resources>
    <string name="app_name">S.W. Finance</string>
    <string name="revenue">Revenue</string>
    <string name="instruction">Enter your Monthly Information Below</string>
    <string name="enter_monthly_revenue">Enter Monthly Revenue</string>
    <string name="dollarSymbol">$</string>
    <string name="costfsales">Cost of Sales</string>
    <string name="enter_cost_of_sales">Enter Cost of Sales</string>
    <string name="operating_expenses">Operating Expenses</string>
    <string name="enter_operating_expenses">Enter Op Expenses</string>
    <string name="other_expenses">Other Expenses</string>
    <string name="enter_other_expenses">Enter Other Expenses</string>
    <string name="other_incomes">Other Incomes</string>
    <string name="enter_other_incomes">Enter Other Incomes</string>
    <string name="net_income">Net Income</string>
    <string name="income_review">Income Review</string>
    <string name="main_menu">Main Menu</string>
    <string name="net_income_value">%1$.2f</string>
    <string name="welcome">Welcome </string>
    <string name="go">Go!</string>
    <string name="spinner_year">Select a Year: </string>
    <string name="spinner_month">Select a Month: </string>
    <string name="user_message">"Please Select a Year and a Month "</string>
    <string name="login_msg"><![CDATA[Welcome to the S.W. P&L\nPlease Sign in.]]></string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="Login">Login</string>
    <string name="lfoot_msg">Measure your business\'s success</string>
    <string name="gross_profit">Gross Profit</string>
    <string name="sharedprefrence_file_key">welgammalPreferenceFileNamePL</string>
    <string name="preference_userId_key">welgammalPreferenceUserIdPLKey</string>
    <string name="setTaxRate">Set Tax Rate!</string>
    <string name="create_account_msg">Create Account</string>
    <string name="new_account_msg">New to S.W. Finance? Sign up Here!</string>
    <string name="signup">CREATE</string>
    <string name="new_password">Enter New Password</string>
    <string name="new_username">Enter New Username</string>
    <string name="spinner_taxRate">Select a Tax Rate: </string>
    <string name="enter_tax_rate">Enter Tax Rate</string>
    <string name="accounts_image_description" />
    <string name="profit_calc_button_text">Profit\nCalculator</string>
    <string name="exchange_button_text">Currency\nCalculator</string>
    <string name="report_button_text">Contacts</string>
    <string name="background_image_description">Main Menu background</string>
    <string name="icon_description">Icon</string>
    <string name="loan_button_text">Loan\nCalculator</string>
    <string name="discount_button_text">Discount\nCalculator</string>
    <string name="add_contact">Add Contact</string>
    <string-array name="yearsList">
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
    </string-array>
    <string-array name="monthsList">
        <item>January</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main">Main</string>
    <string name="welcome_discount">Welcome to the product discount calculator</string>
    <string name="price">Price of Product</string>
    <string name="enter_product_price">Enter Unit Price</string>
    <string name="priceOfProduct">Price of Product</string>
    <string name="discountValue">Discount Percentage</string>
    <string name="enter_discount_percentage">Enter Discount (%)</string>
    <string name="discount_calc">Calculate Discount</string>
    <string name="enter_units_sold">Count of Units Sold</string>
    <string name="units_count">Units Count</string>
    <string name="total_discount">Total Discount</string>
    <string name="full_price">Without Discount</string>

</resources>