<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/instructionDisplayTextView"
        android:layout_width="383dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dip"
        android:padding="8dp"
        android:text="@string/instruction"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/revenueLabelTextView"
        android:layout_width="213dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"
        android:text="@string/revenue"
        android:textColor="@color/light_orange"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionDisplayTextView" />

    <EditText
        android:id="@+id/revenueInputEditText"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_monthly_revenue"
        android:textSize="14sp"
        android:textColor="@color/material_dynamic_neutral90"
        android:inputType="numberDecimal"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/revenueLabelTextView"
        app:layout_constraintStart_toEndOf="@id/revenueLabelTextView"
        android:autofillHints="" />

    <TextView
        android:id="@+id/costOfSalesLabelTextView"
        android:layout_width="213dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"
        android:text="@string/costfsales"
        android:textColor="@color/light_orange"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/revenueLabelTextView" />

    <EditText
        android:id="@+id/costOfSalesInputEditText"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_cost_of_sales"
        android:textSize="14sp"
        android:textColor="@color/material_dynamic_neutral90"
        android:inputType="numberDecimal"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/costOfSalesLabelTextView"
        app:layout_constraintStart_toEndOf="@id/costOfSalesLabelTextView"
        android:autofillHints="" />



    <TextView
        android:id="@+id/operatingExpensesLabelTextView"
        android:layout_width="213dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"
        android:text="@string/operating_expenses"
        android:textColor="@color/light_orange"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costOfSalesLabelTextView" />

    <EditText
        android:id="@+id/operatingExpensesInputEditText"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_operating_expenses"
        android:textSize="14sp"
        android:textColor="@color/material_dynamic_neutral90"
        android:inputType="numberDecimal"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/operatingExpensesLabelTextView"
        app:layout_constraintStart_toEndOf="@id/operatingExpensesLabelTextView"
        android:autofillHints="" />

    <TextView
        android:id="@+id/otherExpensesLabelTextView"
        android:layout_width="213dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"
        android:text="@string/other_expenses"
        android:textColor="@color/light_orange"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operatingExpensesLabelTextView" />

    <EditText
        android:id="@+id/otherExpensesInputEditText"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_other_expenses"
        android:textSize="14sp"
        android:textColor="@color/material_dynamic_neutral90"
        android:inputType="numberDecimal"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/otherExpensesLabelTextView"
        app:layout_constraintStart_toEndOf="@id/otherExpensesLabelTextView"
        android:autofillHints="" />

    <TextView
        android:id="@+id/otherIncomesLabelTextView"
        android:layout_width="213dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"
        android:text="@string/other_incomes"
        android:textColor="@color/light_orange"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherExpensesLabelTextView" />

    <EditText
        android:id="@+id/otherIncomesInputEditText"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_other_incomes"
        android:textSize="14sp"
        android:textColor="@color/material_dynamic_neutral90"
        android:inputType="numberDecimal"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/otherIncomesLabelTextView"
        app:layout_constraintStart_toEndOf="@id/otherIncomesLabelTextView"
        android:autofillHints="" />
    <TextView
        android:id="@+id/netIncomesLabelTextView"
        android:layout_width="213dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:padding="8dp"
        android:text="@string/net_income"
        android:textColor="@color/blue"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherIncomesLabelTextView" />

    <TextView
        android:id="@+id/netIncomesOnputTextView"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:textSize="22sp"
        tools:text="$0.00"
        android:textColor="@color/cardview_light_background"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/netIncomesLabelTextView"
        app:layout_constraintStart_toEndOf="@id/netIncomesLabelTextView"
        />

    <Button
        android:id="@+id/netIncomeButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/light_orange"
        android:gravity="center"
        android:onClick="netIncome"
        android:shadowColor="@color/material_dynamic_secondary90"
        android:text="@string/net_income"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/netIncomesLabelTextView" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:shadowColor="@color/material_dynamic_secondary90"
        android:text="@string/main_menu"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:backgroundTint="@color/light_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/netIncomeButton" />


</androidx.constraintlayout.widget.ConstraintLayout>