<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".database.ui.UserSignup">



    <ImageView
        android:id="@+id/logoimageView"
        android:layout_width="383dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:srcCompat="@drawable/logoproject"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/loginMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/create_account_msg"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoimageView" />

    <EditText
        android:id="@+id/createUserNameEditText"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:autofillHints="Please Enter New Username"
        android:hint="@string/new_username"
        android:gravity="center"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginMessageTextView"

        />
    <EditText
        android:id="@+id/createPasswordEditText"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:autofillHints="Type Your New Password"
        android:hint="@string/new_password"
        android:gravity="center"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/material_dynamic_neutral90"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createUserNameEditText"

        />
    <Button
        android:id="@+id/signupButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/light_orange"
        android:gravity="center"
        android:shadowColor="@color/material_dynamic_secondary90"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createPasswordEditText"
        />

</androidx.constraintlayout.widget.ConstraintLayout>