<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logoimageView"
        android:layout_width="383dp"
        android:layout_height="160dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:srcCompat="@drawable/logoproject"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/loginMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/login_msg"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoimageView" />

    <EditText
        android:id="@+id/userNameLoginEditText"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:autofillHints="Please Enter Username"
        android:hint="@string/username"
        android:gravity="center"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginMessageTextView"

 />
    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:autofillHints="Please Enter Password"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/material_dynamic_neutral90"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameLoginEditText"

        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/light_orange"
        android:gravity="center"
        android:onClick="login"
        android:shadowColor="@color/material_dynamic_secondary90"
        android:text="@string/Login"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLoginEditText" />

    <TextView
        android:id="@+id/footMessageTextView"
        android:layout_width="400dp"
        android:layout_height="67dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/lfoot_msg"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <TextView
        android:id="@+id/newUser"
        android:layout_width="194dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:gravity="center"
        android:text="Sign Up?"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/footMessageTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>